# ticket-miner

./: .env.example  .gitignore  pyproject.toml  requirements.txt  setup.py
src/ticket_extractors/: default_url_patterns.json
tests/: __init__.py  conftest.py
tests/extractors/: __init__.py  conftest.py  fetch_mock_data.py  test_confluence_extractor.py  test_gos13312.py  test_jira_extractor_mock.py  test_person_analyzer.py  test_url_analyzer.py  test_url_analyzer_patterns.py  test_utils.py  test_webpage_extractor.py
tests/extractors/mock_data/: ticket_PROJ-1234_20250214_122143.json
